Group configured features by biome